[gd_scene load_steps=23 format=3 uid="uid://b8qu4bxbhapgl"]

[ext_resource type="Script" path="res://scripts/tower.gd" id="1_c2mwh"]
[ext_resource type="Texture2D" uid="uid://i2j4kvn0w7q4" path="res://assets/sprites/range.png" id="2_oryv4"]
[ext_resource type="Texture2D" uid="uid://du6xscvmfx8l8" path="res://assets/sprites/towerselection.png" id="3_c5d30"]
[ext_resource type="Script" path="res://scripts/progress_bar.gd" id="4_017vf"]
[ext_resource type="Script" path="res://scripts/tower_level_manager.gd" id="5_t5pdt"]
[ext_resource type="PackedScene" uid="uid://djj6tjv3p0qo6" path="res://scenes/tower_level.tscn" id="6_eu8cm"]
[ext_resource type="Texture2D" uid="uid://bauh87fo4ohfx" path="res://assets/sprites/slowTower.png" id="7_34jkt"]
[ext_resource type="PackedScene" uid="uid://cqp50ghosc4oa" path="res://scenes/slow_effect.tscn" id="8_7bdrw"]
[ext_resource type="PackedScene" uid="uid://dennk04qdhx0m" path="res://scenes/barrel.tscn" id="10_4dyam"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p0cbx"]
size = Vector2(64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xedab"]
atlas = ExtResource("2_oryv4")
region = Rect2(0, 0, 2000, 2000)

[sub_resource type="SpriteFrames" id="SpriteFrames_ocubu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xedab")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fxpcc"]
atlas = ExtResource("3_c5d30")
region = Rect2(0, 0, 72, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_7prn5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxpcc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2ou6o"]
radius = 200.998

[sub_resource type="AtlasTexture" id="AtlasTexture_mdq5s"]
atlas = ExtResource("7_34jkt")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vq0yl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdq5s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_qk45j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ProgressBars/WarmupProgressBar:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(64, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ProgressBars/UpgradeProgressBar:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(64, 8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ujsix"]
resource_name = "sell"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_ytq2c"]
resource_name = "upgrade"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0.313726), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"upgrade_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ProgressBars/UpgradeProgressBar:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 8), Vector2(64, 8)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../ProgressBars/UpgradeProgressBar")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"show"
}, {
"args": [],
"method": &"hide"
}]
}

[sub_resource type="Animation" id="Animation_dfao1"]
resource_name = "warmup"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0.313726), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"warmup_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ProgressBars/WarmupProgressBar:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 8), Vector2(64, 8)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../ProgressBars/WarmupProgressBar")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"show"
}, {
"args": [],
"method": &"hide"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qnhh7"]
_data = {
"RESET": SubResource("Animation_qk45j"),
"sell": SubResource("Animation_ujsix"),
"upgrade": SubResource("Animation_ytq2c"),
"warmup": SubResource("Animation_dfao1")
}

[node name="SlowTower" type="Node2D"]
script = ExtResource("1_c2mwh")
tower_name = "Slow Tower"
tower_description = "Slows enemy movement speed temporarily."
price = 3

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource("RectangleShape2D_p0cbx")

[node name="Range" type="Node2D" parent="."]

[node name="RangeSprite" type="AnimatedSprite2D" parent="Range"]
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_ocubu")

[node name="Selection" type="Node2D" parent="."]
visible = false

[node name="SelectionSprite" type="AnimatedSprite2D" parent="Selection"]
sprite_frames = SubResource("SpriteFrames_7prn5")

[node name="ProgressBars" type="Node2D" parent="."]

[node name="WarmupProgressBar" type="ColorRect" parent="ProgressBars"]
offset_left = -32.0
offset_top = 40.0
offset_right = 32.0
offset_bottom = 48.0
color = Color(0, 0, 1, 1)
script = ExtResource("4_017vf")

[node name="UpgradeProgressBar" type="ColorRect" parent="ProgressBars"]
offset_left = -32.0
offset_top = 40.0
offset_right = 32.0
offset_bottom = 48.0
color = Color(1, 1, 0, 1)
script = ExtResource("4_017vf")

[node name="Levels" type="Node2D" parent="." node_paths=PackedStringArray("base_level")]
script = ExtResource("5_t5pdt")
base_level = NodePath("Level0")

[node name="FiringLine" type="RayCast2D" parent="Levels"]
visible = false
enabled = false
target_position = Vector2(200, 0)
collide_with_areas = true

[node name="EffectArea" type="Area2D" parent="Levels"]

[node name="EffectAreaShape" type="CollisionShape2D" parent="Levels/EffectArea"]
shape = SubResource("CircleShape2D_2ou6o")

[node name="Level0" parent="Levels" instance=ExtResource("6_eu8cm")]

[node name="Sprite" parent="Levels/Level0" index="0"]
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_vq0yl")

[node name="Stats" parent="Levels/Level0" index="1"]
stats_enabled = false

[node name="EffectStats" parent="Levels/Level0" index="2"]
effect_duration = 3.0
effect = ExtResource("8_7bdrw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Levels"]
libraries = {
"": SubResource("AnimationLibrary_qnhh7")
}

[node name="Barrel" parent="." instance=ExtResource("10_4dyam")]
enable_shoot = false
enable_pulse = true

[connection signal="area_entered" from="CollisionArea" to="." method="_on_collision_area_area_entered"]
[connection signal="area_exited" from="CollisionArea" to="." method="_on_collision_area_area_exited"]
[connection signal="input_event" from="CollisionArea" to="." method="_on_collision_area_input_event"]
[connection signal="mouse_entered" from="CollisionArea" to="." method="_on_collision_area_mouse_entered"]
[connection signal="mouse_exited" from="CollisionArea" to="." method="_on_collision_area_mouse_exited"]
[connection signal="created_effect" from="Levels" to="." method="_on_levels_created_effect"]
[connection signal="created_projectile" from="Levels" to="." method="_on_levels_created_projectile"]
[connection signal="upgraded" from="Levels" to="." method="_on_levels_upgraded"]
[connection signal="warmed_up" from="Levels" to="." method="_on_levels_warmed_up"]
[connection signal="pulse" from="Barrel" to="." method="_on_barrel_pulse"]

[editable path="Levels/Level0"]
