[gd_scene load_steps=27 format=3 uid="uid://b8qu4bxbhapgl"]

[ext_resource type="Script" path="res://scripts/tower.gd" id="1_c2mwh"]
[ext_resource type="Texture2D" uid="uid://du6xscvmfx8l8" path="res://assets/sprites/towerselection.png" id="3_c5d30"]
[ext_resource type="PackedScene" uid="uid://bsqy7xfg6a4le" path="res://scenes/towers/components/tower_progress_bars.tscn" id="3_r7mld"]
[ext_resource type="PackedScene" uid="uid://ct2i4k8jry8hy" path="res://scenes/towers/components/visualiser.tscn" id="4_pmf8q"]
[ext_resource type="Script" path="res://scripts/tower_level_manager.gd" id="5_t5pdt"]
[ext_resource type="PackedScene" uid="uid://djj6tjv3p0qo6" path="res://scenes/towers/components/tower_level.tscn" id="6_eu8cm"]
[ext_resource type="Texture2D" uid="uid://bauh87fo4ohfx" path="res://assets/sprites/slowTower.png" id="7_34jkt"]
[ext_resource type="PackedScene" uid="uid://ciydhlp5id3lj" path="res://scenes/towers/components/effect_area.tscn" id="7_50fd5"]
[ext_resource type="PackedScene" uid="uid://cqp50ghosc4oa" path="res://scenes/effects/slow_effect.tscn" id="8_7bdrw"]
[ext_resource type="PackedScene" uid="uid://dennk04qdhx0m" path="res://scenes/towers/components/barrel.tscn" id="10_4dyam"]
[ext_resource type="Texture2D" uid="uid://bngv7y86ypnm4" path="res://assets/sprites/slowerTower.png" id="10_4rxji"]
[ext_resource type="Script" path="res://scripts/effect_stats.gd" id="10_bd5or"]
[ext_resource type="Texture2D" uid="uid://b1gc0k4nw34um" path="res://assets/sprites/paralyseTower.png" id="11_bl7ld"]
[ext_resource type="PackedScene" uid="uid://c8ef3082f0jwl" path="res://scenes/effects/paralyse_effect.tscn" id="12_2doa4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p0cbx"]
size = Vector2(64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxpcc"]
atlas = ExtResource("3_c5d30")
region = Rect2(0, 0, 72, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_7prn5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxpcc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_mdq5s"]
atlas = ExtResource("7_34jkt")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vq0yl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdq5s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_nis1n"]
atlas = ExtResource("10_4rxji")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_0mumw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nis1n")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_e3hqx"]
atlas = ExtResource("11_bl7ld")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_i164d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3hqx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_qk45j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ujsix"]
resource_name = "sell"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qnhh7"]
_data = {
"RESET": SubResource("Animation_qk45j"),
"sell": SubResource("Animation_ujsix")
}

[node name="SlowTower" type="Node2D"]
script = ExtResource("1_c2mwh")
tower_name = "Slow Tower"
tower_description = "Slows enemy movement speed temporarily."
price = 3

[node name="DetectMouse" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource("RectangleShape2D_p0cbx")

[node name="Selection" type="Node2D" parent="."]
visible = false

[node name="SelectionSprite" type="AnimatedSprite2D" parent="Selection"]
sprite_frames = SubResource("SpriteFrames_7prn5")

[node name="ProgressBars" parent="." instance=ExtResource("3_r7mld")]

[node name="Visualiser" parent="." instance=ExtResource("4_pmf8q")]

[node name="Levels" type="Node2D" parent="." node_paths=PackedStringArray("base_level")]
script = ExtResource("5_t5pdt")
base_level = NodePath("../BaseLevel")

[node name="EffectArea" parent="Levels" instance=ExtResource("7_50fd5")]
radius = 2.0

[node name="BaseLevel" parent="." node_paths=PackedStringArray("effect_stats", "upgrades") instance=ExtResource("6_eu8cm")]
sprite = SubResource("SpriteFrames_vq0yl")
effect_stats = NodePath("EffectStats")
upgrades = [NodePath("Slower"), NodePath("Paralyse")]
point_towards_enemy = false

[node name="EffectStats" type="Node" parent="BaseLevel"]
script = ExtResource("10_bd5or")
effect_duration = 3.0
effect = ExtResource("8_7bdrw")

[node name="Slower" parent="BaseLevel" node_paths=PackedStringArray("effect_stats") instance=ExtResource("6_eu8cm")]
visible = false
level_description = "Slows enemies for longer."
price = 3
sprite = SubResource("SpriteFrames_0mumw")
effect_stats = NodePath("EffectStats")
point_towards_enemy = false

[node name="EffectStats" type="Node" parent="BaseLevel/Slower"]
script = ExtResource("10_bd5or")
effect_duration = 5.0
effect = ExtResource("8_7bdrw")

[node name="Paralyse" parent="BaseLevel" node_paths=PackedStringArray("effect_stats") instance=ExtResource("6_eu8cm")]
visible = false
level_description = "Paralyses enemies for a short time!"
price = 4
sprite = SubResource("SpriteFrames_i164d")
effect_stats = NodePath("EffectStats")
point_towards_enemy = false

[node name="EffectStats" type="Node" parent="BaseLevel/Paralyse"]
script = ExtResource("10_bd5or")
effect_duration = 3.0
effect = ExtResource("12_2doa4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Levels")
libraries = {
"": SubResource("AnimationLibrary_qnhh7")
}

[node name="Barrel" parent="." instance=ExtResource("10_4dyam")]
enable_shoot = false
enable_pulse = true

[connection signal="gui_input" from="DetectMouse" to="." method="_on_detect_mouse_gui_input"]
[connection signal="mouse_entered" from="DetectMouse" to="." method="_on_detect_mouse_mouse_entered"]
[connection signal="mouse_exited" from="DetectMouse" to="." method="_on_detect_mouse_mouse_exited"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_collision_area_body_entered"]
[connection signal="body_exited" from="CollisionArea" to="." method="_on_collision_area_body_exited"]
[connection signal="upgrade_finished" from="ProgressBars" to="Levels" method="_on_progress_bars_upgrade_finished"]
[connection signal="upgrade_started" from="ProgressBars" to="Levels" method="_on_progress_bars_upgrade_started"]
[connection signal="warmup_finished" from="ProgressBars" to="Levels" method="_on_progress_bars_warmup_finished"]
[connection signal="warmup_started" from="ProgressBars" to="Levels" method="_on_progress_bars_warmup_started"]
[connection signal="adjust_effect_range" from="Levels" to="Visualiser" method="_on_levels_adjust_effect_range"]
[connection signal="adjust_range" from="Levels" to="Visualiser" method="_on_levels_adjust_range"]
[connection signal="created_effect" from="Levels" to="." method="_on_levels_created_effect"]
[connection signal="created_projectile" from="Levels" to="." method="_on_levels_created_projectile"]
[connection signal="upgraded" from="Levels" to="." method="_on_levels_upgraded"]
[connection signal="warmed_up" from="Levels" to="." method="_on_levels_warmed_up"]
[connection signal="adjust_range" from="BaseLevel/EffectStats" to="BaseLevel" method="_on_effect_stats_adjust_range"]
[connection signal="adjust_range" from="BaseLevel/Slower/EffectStats" to="BaseLevel/Slower" method="_on_effect_stats_adjust_range"]
[connection signal="adjust_range" from="BaseLevel/Paralyse/EffectStats" to="BaseLevel/Paralyse" method="_on_effect_stats_adjust_range"]
[connection signal="pulse" from="Barrel" to="." method="_on_barrel_pulse"]
